--- a/prac.css
+++ b/prac.css
@@ -1,6 +1,6 @@
-table, th, td{
-    border: 2px solid black;
-    /* border-collapse: collapse; */
+/* table, th, td{
+    border: 2px solid black; */
+    /* border-collapse: collapse;
     border-radius: 10px;
     border-style: dotted;
 }
@@ -64,4 +64,38 @@ body{
     margin: 15px auto;
     color: black;
     background-color: aquamarine;
+} 
+*/
+
+/* .a{
+    border: 2px dotted blue;
+}
+
+.b{
+    border: 2px dashed blue;
+}
+.c{
+    border: 2px solid blue;
+}
+.d{
+    border: 2px double blue;
+}
+.e{
+    border: 2px groove blue;
+}
+.f{
+    border: 2px inset blue;
+} */
+
+
+div{
+    border: 2px solid black;
+    background-color: lightblue;
+    width: 450px;
+    height: 150px;
+}
+
+p{
+    padding: 25px 25px 25px 25px;
+    
 }
