--- a/prac.css
+++ b/prac.css
@@ -88,7 +88,7 @@ body{
 } */
 
 
-div{
+/* div{
     border: 2px solid black;
     background-color: lightblue;
     width: 450px;
@@ -98,4 +98,41 @@ div{
 p{
     padding: 25px 25px 25px 25px;
     
+} */
+
+/* p{
+    color: blueviolet;
+}
+
+a:link{
+    color: black;
+}
+a:visited{
+    color: aqua;
+}
+a:hover{
+    color: blue;
+    text-decoration: none;
+}
+a:active{
+    color: pink;
+    text-decoration: none;
+} */
+table{
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    
+}
+
+td, th{
+    padding: 8px;
+    border: 1px solid black;
+    text-align: center;
+}
+
+th{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align:center;
 }
